--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "ees-rn-ai",
   "main": "expo-router/entry",
   "version": "1.0.0",
+  "license": "MIT",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
