--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "version": "1.0.0",
   "license": "MIT",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "start": "expo start --dev-client",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "lint": "expo lint",
     "format": "prettier --write .",
@@ -25,6 +25,7 @@
     "@react-navigation/native": "7.1.8",
     "expo": "54.0.25",
     "expo-constants": "18.0.10",
+    "expo-dev-client": "~6.0.18",
     "expo-font": "14.0.9",
     "expo-haptics": "15.0.7",
     "expo-image": "3.0.10",
