feat: update renovate configuration to disable specific package updates for improved stability

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -8,42 +8,77 @@
   "automerge": false,
   "packageRules": [
     {
-      "description": "Expo and React Native core - strict stability",
-      "matchPackagePatterns": ["^expo-", "^react-native$", "^react$", "^react-dom$"],
+      "description": "Disable Expo and React Native core updates",
+      "matchPackagePatterns": ["^expo$", "expo-", "^react-native$"],
+      "enabled": false
+    },
+    {
+      "description": "Disable React core libraries updates",
+      "matchPackageNames": ["react", "react-dom", "react-native-web"],
+      "enabled": false
+    },
+    {
+      "description": "Disable React Navigation ecosystem updates",
+      "matchPackagePatterns": ["@react-navigation/"],
+      "enabled": false
+    },
+    {
+      "description": "Disable critical animation and gesture libraries",
+      "matchPackageNames": [
+        "react-native-reanimated",
+        "react-native-gesture-handler",
+        "react-native-screens",
+        "react-native-safe-area-context",
+        "@legendapp/motion"
+      ],
+      "enabled": false
+    },
+    {
+      "description": "Disable styling foundation libraries",
+      "matchPackageNames": ["nativewind", "tailwindcss", "tailwind-variants"],
+      "enabled": false
+    },
+    {
+      "description": "Disable UI framework and critical dependencies",
+      "matchPackageNames": [
+        "@gluestack-ui/core",
+        "@gluestack-ui/utils",
+        "react-native-svg",
+        "react-native-worklets",
+        "react-aria",
+        "react-stately"
+      ],
+      "enabled": false
+    },
+    {
+      "description": "Disable TypeScript and linting tools",
+      "matchPackageNames": ["typescript", "eslint", "eslint-config-expo", "@types/react"],
+      "enabled": false
+    },
+    {
+      "description": "Disable build system and git hooks",
+      "matchPackageNames": [
+        "babel-plugin-module-resolver",
+        "husky",
+        "@commitlint/cli",
+        "@commitlint/config-conventional"
+      ],
+      "enabled": false
+    },
+    {
+      "description": "Allow manual updates for formatting and utilities",
+      "matchPackageNames": ["prettier", "prettier-plugin-tailwindcss"],
       "automerge": false,
-      "stabilityDays": 3
-    },
-    {
-      "description": "React Native ecosystem - strict stability",
-      "matchPackagePatterns": ["@react-navigation/", "@react-native/", "react-native-"],
-      "automerge": false,
-      "stabilityDays": 3
-    },
-    {
-      "description": "Styling packages - moderate stability",
-      "matchPackagePatterns": ["nativewind", "tailwindcss", "tailwind-variants"],
-      "stabilityDays": 2
-    },
-    {
-      "description": "Auto-merge non-major devDependencies updates",
-      "matchDepTypes": ["devDependencies"],
-      "matchUpdateTypes": ["patch", "minor"],
-      "automerge": true,
       "stabilityDays": 1
     },
     {
-      "description": "Never automerge major updates",
-      "matchUpdateTypes": ["major"],
-      "automerge": false
+      "description": "Allow manual updates for other dependencies",
+      "matchPackagePatterns": ["@expo/vector-icons", "@expo/html-elements", "expo-.*"],
+      "automerge": false,
+      "stabilityDays": 2
     },
     {
-      "description": "Block React Native major version updates (e.g. going to v1.0.0)",
-      "matchPackageNames": ["react-native"],
-      "allowedVersions": "< 1.0.0"
-    },
-    {
-      "description": "Ignore major updates for 0.x packages",
-      "matchCurrentVersion": "/^0\\./",
+      "description": "Block major version updates across the board",
       "matchUpdateTypes": ["major"],
       "enabled": false
     }
