--- a/package.json
+++ b/package.json
@@ -21,41 +21,43 @@
     "@gluestack-ui/core": "3.0.12",
     "@gluestack-ui/utils": "3.0.13",
     "@legendapp/motion": "2.5.3",
-    "@react-navigation/bottom-tabs": "7.8.12",
+    "@react-navigation/bottom-tabs": "^7.4.0",
     "@react-navigation/elements": "2.9.2",
-    "@react-navigation/native": "7.1.25",
-    "expo": "54.0.27",
-    "expo-constants": "18.0.11",
+    "@react-navigation/native": "^7.1.8",
+    "expo": "~54.0.30",
+    "expo-asset": "~12.0.12",
+    "expo-constants": "~18.0.12",
+    "expo-dev-client": "~6.0.20",
+    "expo-file-system": "~19.0.21",
     "expo-font": "14.0.10",
     "expo-haptics": "15.0.8",
     "expo-image": "3.0.11",
-    "expo-linking": "8.0.10",
-    "expo-router": "6.0.17",
-    "expo-splash-screen": "31.0.12",
+    "expo-linking": "~8.0.11",
+    "expo-router": "~6.0.21",
+    "expo-splash-screen": "~31.0.13",
     "expo-status-bar": "3.0.9",
     "expo-symbols": "1.0.8",
     "expo-system-ui": "6.0.9",
     "expo-web-browser": "15.0.10",
-    "expo-dev-client": "6.0.18",
     "nativewind": "4.2.1",
-    "react": "19.2.3",
+    "react": "19.1.0",
     "react-aria": "3.45.0",
-    "react-dom": "19.2.3",
-    "react-native": "0.83.1",
-    "react-native-gesture-handler": "2.29.1",
-    "react-native-reanimated": "4.2.1",
+    "react-dom": "19.1.0",
+    "react-native": "0.81.5",
+    "react-native-gesture-handler": "~2.28.0",
+    "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "5.6.2",
     "react-native-screens": "4.16.0",
-    "react-native-svg": "15.15.1",
+    "react-native-svg": "15.12.1",
     "react-native-web": "0.21.0",
-    "react-native-worklets": "0.6.1",
+    "react-native-worklets": "0.5.1",
     "react-stately": "3.43.0",
     "tailwind-variants": "0.3.1"
   },
   "devDependencies": {
     "@commitlint/cli": "20.1.0",
     "@commitlint/config-conventional": "20.0.0",
-    "@types/react": "19.2.7",
+    "@types/react": "~19.1.10",
     "babel-plugin-module-resolver": "5.0.2",
     "eslint": "9.39.2",
     "eslint-config-expo": "10.0.0",
